# EmailValidator

./: .replit  README.md  app.py  clean_data.csv  main.py  pipeline_test.csv  pyproject.toml  replit.md  requirements.txt  test_basic.csv  test_data.json  test_data.tsv  test_data_multi_sheet.xlsx  test_data_simple.csv  test_deterministic.py  test_duplicates.csv  test_emails.csv  test_emails.xlsx  test_pipeline.csv  test_xlsx.xlsx  validation_test.csv  validation_test.xlsx
app/: __init__.py  array_dedupe.py  array_processor.py  decision_engine.py  dedupe.py  detect.py  deterministic_email_engine.py  email_entry.py  features.py  io_utils.py  llm_adapter.py  normalize.py  pipeline.py  routing.py  ui.py
attached_assets/: Hibu Recruiting v2(Master)_1758019631884.csv  Pasted--Build-a-Python-tool-Update-Only-Email-Verifier-Goal-Create-a-program-that-ingests-large--1758018232808_1758018232809.txt  Pasted--deterministic-email-engine-py-Eli-1758023256867_1758023256869.txt  Pasted-Build-a-Browser-App-Update-Only-Email-Verifier-Goal-Create-a-simple-web-app-that-lets-any-non-te-1757944884727_1757944884728.txt  Pasted-Here-s-a-clean-copy-paste-prompt-for-Replit-Agent-3-It-s-generic-no-images-or-personal-contex-1757944649294_1757944649295.txt  Pasted-Perfect-here-s-a-clean-generic-copy-paste-prompt-for-Replit-Agent-3-that-makes-the-LLM-the-r-1757945891827_1757945891829.txt  changes_1758019835_1758020136746.csv
config/: disposable_domains.txt  role_locals.txt  top_domains.txt  typo_maps.json
core/: __init__.py  email_deduper.py  email_hygeine_engine.py  pipeline.py  processor.py
(+7 files in other folders)
