[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.67.0",
    "email-validator>=2.3.0",
    "idna>=3.10",
    "openai>=1.107.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.14.1",
    "streamlit>=1.49.1",
    "tld>=0.13.1",
]
